--- a/src/components/card-selection/card-selection.scss
+++ b/src/components/card-selection/card-selection.scss
@@ -21,7 +21,7 @@
     padding: 40px 30px 30px;
 
     @media (max-width: $phone-width) {
-      padding: 30px 20px 30px;
+      padding: 15px 15px 15px;
     }
   }
 
