--- a/src/components/card-sign-in/card-sign-in.scss
+++ b/src/components/card-sign-in/card-sign-in.scss
@@ -11,6 +11,10 @@
 
   &__content {
     padding: 38px 30px 32px 30px;
+
+    @media screen and (max-width: $phone-width) {
+      padding: 15px 15px 15px;
+    }
   }
 
   &__title {
